fix invisible zoom

--- a/Frontend/src/app/components/banner/banner.component.css
+++ b/Frontend/src/app/components/banner/banner.component.css
@@ -6,7 +6,7 @@
 @media (min-width:992px) {
     .contenedor {
         width: 100%;
-        height: 70vh;
+        height: 75vh;
     }
 
     .texto-encima {
